# yesoOpenwrtFeed

multimedia/gmediarender/: Makefile
multimedia/gmediarender/gmediarender/: Makefile  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac
multimedia/gmediarender/gmediarender/autom4te.cache/: output.1  requests  traces.0  traces.1
multimedia/gmediarender/gmediarender/data/: Makefile  Makefile.in
multimedia/gmediarender/gmediarender/src/: Makefile  Makefile.in  git-version.h  gmediarender  output_gstreamer.c  upnp_transport.c
multimedia/gmediarender/gmediarender/src/.deps/: logging.Po  main.Po  output.Po  output_gstreamer.Po  song-meta-data.Po  upnp.Po  upnp_connmgr.Po  upnp_control.Po  upnp_device.Po  upnp_renderer.Po  upnp_transport.Po  variable-container.Po  webserver.Po  xmldoc.Po  xmlescape.Po
utils/YeelightSer/: .cproject  .project  Makefile
utils/YeelightSer/src/: CMakeLists.txt  Makefile  hotplug.c  hotplug.h  main.c  serial.c  serial.h
utils/YeelightSer/src/sh/hotplug.d/: 30-yeelightser
utils/YeelightSer/src/sh/init.d/: yeelightser
utils/YeelightSer/src/util/: CMakeLists.txt  logger.c  logger.h  prerun.c  prerun.h
utils/amodefile/: Makefile
utils/amodefile/root/: rc.local  shadow
utils/amodefile/root/config/: luci  network  system  wireless  wireless (复件)
